--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,19 @@
 <main class="main">
-  <h1>Welcome to {{ data.title }} !</h1>
-
-  <img src="https://www.k12digest.com/wp-content/uploads/2024/03/1-3.jpg" class="logo" (click)="onLogoClicked()">
-
-  <input type="text" class="demo" [value]="data.title" (keyup)="onKeyUp(titleInput.value)" #titleInput>
+  
 </main>
+
+@switch (role) {
+    @case ('admin') {
+        <practice-rooms></practice-rooms>
+    }
+    @case ('user') {
+        <h2>Welcome, User!</h2>
+    }
+    @default {
+        <h2>Authorize to start your journey with us</h2>
+    }
+}
+
 
 
 <router-outlet />
