Lifecycle Hook and Component Communication

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,10 @@
-<main class="main">
-  
-</main>
+<practice-container>
+    <practice-rooms></practice-rooms>
+    <practice-employee></practice-employee>
+</practice-container>
 
-@switch (role) {
+
+<!-- @switch (role) {
     @case ('admin') {
         <practice-rooms></practice-rooms>
     }
@@ -12,8 +14,13 @@
     @default {
         <h2>Authorize to start your journey with us</h2>
     }
-}
+} -->
 
+<!-- <div #name></div> -->
 
+<!-- <div>
+    <ng-template #user></ng-template>
+    
+</div> -->
 
 <router-outlet />
