--- a/src/app/rooms/rooms-list/rooms-list.html
+++ b/src/app/rooms/rooms-list/rooms-list.html
@@ -1,7 +1,8 @@
 <div>
-    <div>List of Rooms</div>
+    <div>{{ title }}</div>
     <table>
-        <tr>
+        <thead>
+            <tr>
             <th>Room Number</th>
             <th>Even/Odd</th>
             <th>Room Type</th>
@@ -14,7 +15,9 @@
                 Select Room
             </th>
         </tr>
-        @for (room of rooms | slice : 0:3 ; track room.roomNumber; let e = $even; let o = $odd; let i = $index) {
+        </thead>
+        <tbody>
+            @for (room of rooms; track room.roomNumber; let e = $even; let o = $odd; let i = $index) {
             <tr [class]="e ? 'even' : 'odd' " >
                 <td>{{ room.roomNumber }}</td>
                 <td>{{ e ? "Even" : "Odd " }}</td>
@@ -32,5 +35,6 @@
                 </td>
             </tr>
         }
+        </tbody>
     </table>
 </div>
