--- a/src/app/rooms/rooms.html
+++ b/src/app/rooms/rooms.html
@@ -1,10 +1,12 @@
-<h1>Welcome to {{ hotelName }}</h1>
+<practice-header></practice-header>
+<practice-header></practice-header>
+<practice-header></practice-header>
 <div [hidden]="hideRooms">
     Number of rooms:
     <div [innerText]="numberOfRooms"></div>
 </div> 
 
-<!-- {{  rooms.availableRooms ?? 'No rooms available' }} -->
+<!-- {{  rooms.availableRooms ?? 'No rooms available' }}  -->
 
 <!-- {{ roomList | json }} -->
 
@@ -14,8 +16,12 @@
     </div>
 }
 
-@if (rooms.availableRooms > 0) {
-    <practice-rooms-list [rooms]="roomList"
+<div>
+    <button (click)="addRoom()">Add room</button>
+</div>
+
+@if (hideRooms) {
+    <practice-rooms-list [rooms]="roomList" [title]="title"
                          (selectedRoom)="selectRoom($event)"   
     ></practice-rooms-list>
     }
